--- a/ui/src/pages/plan/Plan.css
+++ b/ui/src/pages/plan/Plan.css
@@ -1,11 +1,12 @@
 .plancontainer {
-    background-color: white;
-    padding-top: 16px;
+    /* background-color: white; */
+    color: white;
+    padding-top: 8px;
 
     width: 100%;
     margin-right: 0;
     margin-left: 0;
 
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 1%;
+    padding-right: 1%;
 }
